[Refactor] table text smaller, spacing in view filter, 3 column on mobile corrected

--- a/all/themes/pixelgarage/scss/mixins/_text.scss
+++ b/all/themes/pixelgarage/scss/mixins/_text.scss
@@ -275,8 +275,9 @@ $pxl-color-glow: #40856D;
   //
   // tables
   table {
-    @include pxl-subtext($teaser);
-
+    p {
+      @include pxl-font-plain-style(legend, $teaser);
+    }
     tr {
       th {
         font-weight: bold;
