--- a/all/themes/pixelgarage/scss/mixins/components/_view-filters.scss
+++ b/all/themes/pixelgarage/scss/mixins/components/_view-filters.scss
@@ -26,7 +26,7 @@
         vertical-align: bottom;
         float: none;
         margin: 0 -2px;
-        padding: 0;
+        padding: 0 0 $grid-gutter-width/2;
 
         >label, >.description {
           display: none;
